# release-notewriter

./: .gitignore  Cargo.toml
docs/: auth  installations-response
prompt_templates/: ask_prompt.tmpl  changes_prompt.tmpl  system_prompt.tmpl
src/: config.rs  lib.rs  main.rs
src/application/: notes.rs
src/application/dtos/: access_token.rs  commit.rs  common.rs  gpt_response.rs  installation.rs  llm_request.rs  release.rs  repository.rs
src/data_access/: github.rs
src/repositories/: github.rs  gpt.rs  system.rs
src/services/: jwt.rs
src/utils/: argument_parser.rs
